FR, reduced default logging level for import, provided debug option
By default psql is called with --quiet and client_min_messages set to warning.
If cf-agent is called with --define DEBUG or DEBUG_config then psql is called
with --echo-all and client_min_messages set to notice.

Also, the log files are piped to gzip to reduce file size.

Changelog: none

--- a/templates/federated_reporting/config.sh.mustache
+++ b/templates/federated_reporting/config.sh.mustache
@@ -7,6 +7,8 @@ DEFAULT_PREFIX="${DEFAULT_PREFIX:-/opt/cfengine/federation/}"
 # generic configuration
 CFE_BIN_DIR="{{bindir}}"
 CFE_BIN_DIR="${CFE_BIN_DIR:-/var/cfengine/bin}"
+CFE_FR_DEBUG="{{classes.DEBUG}}"
+CFE_FR_DEBUG="${CFE_FR_DEBUG:-false}"
 
 # specific feeder name
 CFE_FR_FEEDER="{{feeder}}"
