--- a/templates/federated_reporting/filter.sed.mustache
+++ b/templates/federated_reporting/filter.sed.mustache
@@ -14,6 +14,7 @@ s/public\.//g;
 
 # don't reset the promiselog sequence value
 /SELECT pg_catalog.setval('__promiselog_id_seq.*$/d
+/SELECT pg_catalog.setval('__lastseenhostslogs_id_seq.*$/d
 
 # enable more debug messages
 s/client_min_messages = warning/client_min_messages = notice/
