--- a/templates/federated_reporting/config.sh.mustache
+++ b/templates/federated_reporting/config.sh.mustache
@@ -7,6 +7,7 @@ DEFAULT_PREFIX="${DEFAULT_PREFIX:-/opt/cfengine/federation/}"
 # generic configuration
 CFE_BIN_DIR="{{bindir}}"
 CFE_BIN_DIR="${CFE_BIN_DIR:-/var/cfengine/bin}"
+CFE_FR_SED_ARGS="{{sed_args}}" # no extra args by default
 
 # specific feeder name
 CFE_FR_FEEDER="{{feeder}}"
@@ -38,6 +39,8 @@ CFE_FR_COMPRESSOR_EXT="{{compressor_ext}}"
 CFE_FR_COMPRESSOR_EXT="${CFE_FR_COMPRESSOR_EXT:-gz}"
 CFE_FR_DUMP_DIR="{{dump_dir}}"
 CFE_FR_DUMP_DIR="${CFE_FR_DUMP_DIR:-$DEFAULT_PREFIX/fedhub/dump}"
+CFE_FR_DUMP_FILTERS_DIR="{{dump_filters_dir}}"
+CFE_FR_DUMP_FILTERS_DIR="${CFE_FR_DUMP_FILTERS_DIR:-$DEFAULT_PREFIX/fedhub/dump/filters}"
 
 # transport phase
 CFE_FR_FEEDER_USERNAME="{{feeder_username}}"
@@ -64,9 +67,8 @@ CFE_FR_EXTRACTOR="${CFE_FR_EXTRACTOR:-zcat}"
 CFE_FR_EXTRACTOR_ARGS="{{extractor_args}}" # no extra args by default
 CFE_FR_IMPORT_NJOBS="{{n_jobs}}"           # no explicit limit of jobs by default
                                            # (will use all the CPUs available)
-CFE_FR_SED_ARGS="{{sed_args}}" # no extra args by default
-CFE_FR_SED_FILTERS_DIR="{{sed_filters_dir}}"
-CFE_FR_SED_FILTERS_DIR="${CFE_FR_SED_FILTERS_DIR:-$DEFAULT_PREFIX/superhub/import/filters}"
+CFE_FR_IMPORT_FILTERS_DIR="{{import_filters_dir}}"
+CFE_FR_IMPORT_FILTERS_DIR="${CFE_FR_IMPORT_FILTERS_DIR:-$DEFAULT_PREFIX/superhub/import/filters}"
 # no inventory refresh command by default (=> no inventory refresh after import)
 CFE_FR_INVENTORY_REFRESH_CMD="{{inventory_refresh_cmd}}"
 CFE_FR_DB_USER="{{db_user}}"
