--- a/templates/federated_reporting/config.sh.mustache
+++ b/templates/federated_reporting/config.sh.mustache
@@ -28,6 +28,7 @@ __benchmarkslog
 __contextslog
 __promiseexecutions
 __promiselog_*
+__inventory
 contextcache"
 CFE_FR_TABLES="{{tables}}"
 CFE_FR_TABLES="${CFE_FR_TABLES:-$DEFAULT_TABLES}"
@@ -70,7 +71,6 @@ CFE_FR_IMPORT_NJOBS="{{n_jobs}}"           # no explicit limit of jobs by defaul
                                            # (will use all the CPUs available)
 CFE_FR_IMPORT_FILTERS_DIR="{{import_filters_dir}}"
 CFE_FR_IMPORT_FILTERS_DIR="${CFE_FR_IMPORT_FILTERS_DIR:-$DEFAULT_PREFIX/superhub/import/filters}"
-# no inventory refresh command by default (=> no inventory refresh after import)
 CFE_FR_INVENTORY_REFRESH_CMD="{{inventory_refresh_cmd}}"
 CFE_FR_DB_USER="{{db_user}}"
 CFE_FR_DB_USER="${CFE_FR_DB_USER:-cfpostgres}"
