--- a/templates/federated_reporting/config.sh.mustache
+++ b/templates/federated_reporting/config.sh.mustache
@@ -9,6 +9,7 @@ CFE_BIN_DIR="{{bindir}}"
 CFE_BIN_DIR="${CFE_BIN_DIR:-/var/cfengine/bin}"
 CFE_FR_SED_ARGS="{{sed_args}}" # no extra args by default
 CFE_FR_AWK_ARGS="{{awk_args}}" # no extra args by default
+CFE_VERSION="{{cf_version}}"
 
 # specific feeder name
 CFE_FR_FEEDER="{{feeder}}"
