--- a/cfe_internal/enterprise/templates/httpd.conf.mustache
+++ b/cfe_internal/enterprise/templates/httpd.conf.mustache
@@ -125,12 +125,13 @@ LogLevel warn
 <IfModule log_config_module>
     LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
     LogFormat "%h %l %u %t \"%r\" %>s %b" common
+    LogFormat "%h %l %{username}n %t \"%r\" %>s %b" common_with_apache_notes_username
 
     <IfModule logio_module>
       LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\" %I %O" combinedio
     </IfModule>
 
-    CustomLog "logs/access_log" common
+    CustomLog "logs/access_log" common_with_apache_notes_username
 </IfModule>
 
 <IfModule mime_module>
@@ -191,6 +192,7 @@ LogLevel warn
     ServerName {{{vars.sys.fqhost}}}:443
     # ServerAdmin root@localhost
     ErrorLog "{{{vars.cfe_internal_hub_vars.error_log}}}"
+    LogFormat "%h %l %{username}n %t \"%r\" %>s %b"
     TransferLog "{{{vars.cfe_internal_hub_vars.access_log}}}"
 
     SSLEngine on
