Fixed tailing of failed feeder log Changelog: none Ticket: ENT-5195
(cherry picked from commit ffcbbf3936dead8f92192baf9a6c7a2f75a40540)

--- a/templates/federated_reporting/config.sh.mustache
+++ b/templates/federated_reporting/config.sh.mustache
@@ -39,6 +39,8 @@ CFE_FR_COMPRESSOR="${CFE_FR_COMPRESSOR:-gzip}"
 CFE_FR_COMPRESSOR_ARGS="{{compressor_args}}" # no extra args by default
 CFE_FR_COMPRESSOR_EXT="{{compressor_ext}}"
 CFE_FR_COMPRESSOR_EXT="${CFE_FR_COMPRESSOR_EXT:-gz}"
+CFE_FR_DECOMPRESS_ARGS="{{decompress_args}}"
+CFE_FR_DECOMPRESS_ARGS="${CFE_FR_DECOMPRESS_ARGS:--d -c}"
 CFE_FR_DUMP_DIR="{{dump_dir}}"
 CFE_FR_DUMP_DIR="${CFE_FR_DUMP_DIR:-$DEFAULT_PREFIX/fedhub/dump}"
 CFE_FR_DUMP_FILTERS_DIR="{{dump_filters_dir}}"
