--- a/templates/cf-monitord.service.mustache
+++ b/templates/cf-monitord.service.mustache
@@ -2,11 +2,12 @@
 Description=CFEngine Monitor Daemon
 After=syslog.target
 ConditionPathExists={{{vars.sys.bindir}}}/cf-monitord
+ConditionPathExists={{{vars.sys.inputdir}}}/promises.cf
 PartOf=cfengine3.service
 
 [Service]
 Type=simple
-ExecStart={{{ vars.sys.bindir}}}/cf-monitord --no-fork --verbose
+ExecStart={{{vars.sys.bindir}}}/cf-monitord --no-fork
 Restart=always
 RestartSec=10
 
