--- a/cfe_internal/enterprise/templates/runalerts.php.mustache
+++ b/cfe_internal/enterprise/templates/runalerts.php.mustache
@@ -11,7 +11,7 @@ while(1 == 1)
 {
   $status=0;
   touch ('{{{vars.cfe_internal_php_runalerts.runalerts_stampfiles_dir}}}/runalerts_all');
-  passthru('{{{vars.sys.workdir}}}/httpd/php/bin/php {{{vars.sys.workdir}}}/httpd/htdocs/index.php cli_tasks runalerts {{{vars.cfe_internal_php_runalerts.sql[limit]}}} {{{vars.cfe_internal_php_runalerts.sql[running]}}} all', $status);
+  passthru('{{{vars.sys.workdir}}}/httpd/php/bin/php {{{vars.cfe_internal_hub_vars.public_docroot}}}/index.php cli_tasks runalerts {{{vars.cfe_internal_php_runalerts.sql[limit]}}} {{{vars.cfe_internal_php_runalerts.sql[running]}}} all', $status);
 
   if ($status != 0){
     print("Error executing cli_task runalerts all");
