Fixed broken redirect from http to htttps
ChangeLog: None

Changed global DocumentRoot to public_docroot

 Ticket: ENT-5580

--- a/cfe_internal/enterprise/templates/httpd.conf.mustache
+++ b/cfe_internal/enterprise/templates/httpd.conf.mustache
@@ -99,7 +99,7 @@ Header edit Set-Cookie ^(.*)$ $1;HttpOnly;Secure
 
 # Server configuration
 # ServerAdmin root@localhost
-DocumentRoot "{{{vars.cfe_internal_hub_vars.docroot}}}"
+DocumentRoot "{{{vars.cfe_internal_hub_vars.public_docroot}}}"
 
 <Directory />
     Order deny,allow
