Fixed pkg module parsing input when values include equals (=)
Values containing spaces still aren't usable due to the way they are
passed around, but still...

Ticket: CFE-3568
Changelog: Title

--- a/modules/packages/vendored/pkg.mustache
+++ b/modules/packages/vendored/pkg.mustache
@@ -46,11 +46,10 @@ fatal() {
 }
 
 parse_line() {
-    INPUTP="$1"
-
-    echo "${INPUTP}" | awk -F= '{print "KEYWORD=" $1 "; VALUE=" $2;}' 2>/dev/null
-
-    unset INPUTP
+    echo "$1" | awk -F= '{
+        i=index($0,"=");
+        print "KEYWORD=\"" $1 "\"" "; VALUE=\"" substr($0, i+1) "\"";
+    }' 2>/dev/null
 }
 
 read_options() {
