Always update modules from masterfiles to $(sys.workdir)/modules
Previously only distribution packages would cause modules to be upgraded.

Now new versions of masterfiles will also cause modules to be upgraded.

Ticket: ENT-5752
Changelog: title
(cherry picked from commit 225f5c0cc065c047e38cbfe2e6c6ee7ff813ee07)

Conflicts:
	cfe_internal/update/update_policy.cf
	lib/packages.cf
	modules/packages/Makefile.am
	modules/packages/vendored/apt_get.mustache
	modules/packages/vendored/yum.mustache
	modules/packages/vendored/zypper.mustache

--- a/modules/packages/vendored/apt_get.mustache
+++ b/modules/packages/vendored/apt_get.mustache
@@ -1,4 +1,7 @@
-#!@bindir@/python
+#!/usr/bin/python
+# Note that the shebang above is ignored when run in policy
+# See lib/packages.cf `package_module apt_get` use of the
+# `interpreter` attribute to use cfengine-selected-python.
 
 import sys
 import os
