--- a/modules/packages/vendored/zypper.mustache
+++ b/modules/packages/vendored/zypper.mustache
@@ -1,4 +1,7 @@
-#!@bindir@/python
+#!/usr/bin/python
+# Note that the shebang above is ignored when run in policy
+# See lib/packages.cf `package_module zypper` use of the
+# `interpreter` attribute to use cfengine-selected-python.
 
 #####################################################################################
 # Copyright 2016 Normation SAS
