Always update modules from masterfiles to $(sys.workdir)/modules
Previously only distribution packages would cause modules to be upgraded.

Now new versions of masterfiles will also cause modules to be upgraded.

Ticket: ENT-5752
Changelog: title

--- a/modules/packages/vendored/zypper.mustache
+++ b/modules/packages/vendored/zypper.mustache
@@ -1,4 +1,4 @@
-#!@bindir@/cfengine-selected-python
+#!{{bindir}}/cfengine-selected-python
 
 #####################################################################################
 # Copyright 2016 Normation SAS
