Denied static directory in the httpd.conf
(cherry picked from commit b7efb5a23cd4a2b933e60789581f2c555c8cc614)

--- a/cfe_internal/enterprise/templates/httpd.conf.mustache
+++ b/cfe_internal/enterprise/templates/httpd.conf.mustache
@@ -294,3 +294,8 @@ AddType    application/x-httpd-php-source php{{{vars.cfe_internal_hub_vars.php_v
   Deny from all
   AllowOverride None
 </Directory>
+
+<Directory "{{{vars.cfe_internal_hub_vars.docroot}}}/static">
+  Deny from all
+  AllowOverride None
+</Directory>
